# tnkQtOld

./: .gitmodules  CMakeLists.txt  README.md  common.pri  mail.pri  sql.pri  sync.pri  sync.profile  tnkqt.pro  widgets.pri  ws.pri
common/: config.h  easyproperty.h  jsonconfig.h  jsonobject.cpp  jsonobject.h  singleton.h  timer.h  utils.cpp  utils.h
demo/: demo.pro  main.cpp  main.qml  myobject.cpp  myobject.h  mysubobject.cpp  mysubobject.h
demoQt/: demoQt.pro  mainwindow.cpp  tabbedwindow.cpp  tabbedwindow.h  testwidget.ui
examples/: examples.pro
mail/: imap.cpp  imap.h  imapcommand.cpp  imapcommand.h  longstream.cpp  longstream_p.h  longstring.cpp  longstring_p.h  qmailaddress.cpp  qmailaddress.h  qmailcodec.cpp  qmailcodec.h  qmailid.cpp  qmailid.h  qmailinstantiations.cpp  qmailipc.h  qmailmessage.cpp  qmailmessage.h  qmailmessage_p.h  qmailmessagefwd.h  qmailnamespace.cpp  qmailnamespace.h  qmailtimestamp.h  qprivateimplementation.h  qprivateimplementationdef_p.h
sql/: proxymodel.cpp  proxymodel.h  querytablemodel.cpp  querytablemodel.h  sqldatabase.cpp  sqldatabase.h  sqltablemodel.cpp  sqltablemodel.h
src/: src.pro
sync/: engine.cpp  engine.h  model.cpp  model.h  mymodel.cpp  mymodel.h  object.cpp  object.h  querybuilder.cpp  querybuilder.h
test/: mainwindow.cpp  mainwindow.h  mainwindow.ui  test.pro
widgets/: framelesswidget.cpp  framelesswidget.h  framelesswidget.ui  jsoneditdialog.cpp  jsoneditdialog.h  jsoneditdialog.ui  stylesheet.cpp  stylesheet.h  tabbar.cpp  tabbar.h  tabbedwidget.cpp  tabbedwidget.h  tabgrabwidget.cpp  tabgrabwidget.h  (+4 more)
(+64 files in other folders)
